--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sprint_13",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Project work 13 yandex.praktikum.",
   "main": "app.js",
   "scripts": {
@@ -17,6 +17,10 @@
     "nodemon": "^2.0.3"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.9.14",
+    "mongoose-validator": "^2.1.0",
+    "validator": "^13.0.0"
   }
 }
